<resources>
    <string name="app_name">Where to eat?</string>
    <string name="restaurants">Restaurants</string>
    <string name="details">Details</string>
    <string name="profile">Profile</string>
    <string name="details_name">Name</string>
    <string name="logo">logo</string>
    <string name="details_id">Id</string>
    <string name="details_address">Address</string>
    <string name="details_city">City</string>
    <string name="details_state">State</string>
    <string name="details_area">Area</string>
    <string name="details_postalcode">Postal Code</string>
    <string name="details_country">Country</string>
    <string name="details_price">Price</string>
    <string name="details_reserve_url">Reserve URL</string>
    <string name="details_mobile_reserve_url">Mobile Reserve URL</string>
    <string name="call_the_place">Call the Place</string>
    <string name="profile_pic">Profile picture</string>
    <string name="view_favourites">Favourites</string>
    <string name="username">UserName</string>
    <string name="action_search">Search</string>

    <string name="action_settings">Settings</string>
    <string name="search_hint">Type restaurant name…</string>
    <string name="view_on_map">View location</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="log_in_register">Log in/Register</string>
    <string name="del_menu">Delete</string>
    <string name="menu_logout">menu_logout</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_fav_str">No favorites added yet! Try to find some!</string>
    <string name="first_page">1</string>
</resources>