<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginBottom="20sp">

    <TextView
        android:id="@+id/details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/details_name"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/details_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_address"
        android:layout_width="19dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toTopOf="@+id/img_city"
        app:layout_constraintEnd_toEndOf="@+id/details_address"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_address"
        app:srcCompat="@drawable/address" />

    <TextView
        android:id="@+id/details_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_address"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_address"
        app:layout_constraintTop_toBottomOf="@+id/details_name" />

    <ImageView
        android:id="@+id/img_city"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_state"
        app:layout_constraintEnd_toEndOf="@+id/details_city"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_city"
        app:srcCompat="@drawable/city" />

    <TextView
        android:id="@+id/details_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_city"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_city"
        app:layout_constraintTop_toBottomOf="@+id/details_address" />

    <ImageView
        android:id="@+id/img_state"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_area"
        app:layout_constraintEnd_toEndOf="@+id/details_state"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_state"
        app:srcCompat="@drawable/state" />

    <TextView
        android:id="@+id/details_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_state"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_city"
        app:layout_constraintStart_toEndOf="@+id/img_state"
        />

    <ImageView
        android:id="@+id/img_area"
        android:layout_width="20sp"
        android:layout_height="20sp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/img_postalcode"
        app:layout_constraintEnd_toEndOf="@+id/details_area"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_area"
        app:srcCompat="@drawable/area" />

    <TextView
        android:id="@+id/details_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_area"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_postalcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_state"
        app:layout_constraintStart_toEndOf="@+id/img_area"/>

    <ImageView
        android:id="@+id/img_postalcode"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_country"
        app:layout_constraintEnd_toEndOf="@+id/details_postalcode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_postalcode"
        app:srcCompat="@drawable/postal" />

    <TextView
        android:id="@+id/details_postalcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_postalcode"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_area"
        app:layout_constraintStart_toEndOf="@+id/img_postalcode"/>

    <ImageView
        android:id="@+id/img_country"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_price"
        app:layout_constraintEnd_toEndOf="@+id/details_country"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_country"
        app:srcCompat="@drawable/country" />

    <TextView
        android:id="@+id/details_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_country"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_postalcode"
        app:layout_constraintStart_toEndOf="@+id/img_country"/>

    <ImageView
        android:id="@+id/img_price"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_reservation"
        app:layout_constraintEnd_toEndOf="@+id/details_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_price"
        app:srcCompat="@drawable/price" />

    <TextView
        android:id="@+id/details_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_price"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_reserve_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_country"
        app:layout_constraintStart_toEndOf="@+id/img_price"/>

    <ImageView
        android:id="@+id/img_reservation"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_mobile_reservation"
        app:layout_constraintEnd_toEndOf="@+id/details_reserve_url"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_reserve_url"
        app:srcCompat="@drawable/reservation" />

    <TextView
        android:id="@+id/details_reserve_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_reserve_url"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/details_mobile_reserve_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_price"
        app:layout_constraintStart_toEndOf="@+id/img_reservation"/>

    <ImageView
        android:id="@+id/img_mobile_reservation"
        android:layout_width="20sp"
        android:layout_height="20sp"
        app:layout_constraintEnd_toEndOf="@+id/details_mobile_reserve_url"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_mobile_reserve_url"
        app:srcCompat="@drawable/reservation_mobile" />

    <TextView
        android:id="@+id/details_mobile_reserve_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/details_mobile_reserve_url"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_mobile_reservation"
        app:layout_constraintTop_toBottomOf="@+id/details_reserve_url" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/call_the_place"
        android:layout_width="98dp"
        android:layout_height="99dp"
        android:background="@drawable/telephone"
        android:contentDescription="@string/call_the_place"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_location_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_mobile_reserve_url"
        app:layout_constraintVertical_bias="0.502" />

    <ImageButton
        android:id="@+id/view_location_map"
        android:layout_width="90dp"
        android:layout_height="99dp"
        android:background="@drawable/map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/call_the_place"
        app:layout_constraintTop_toBottomOf="@+id/details_mobile_reserve_url"
        android:contentDescription="@string/view_on_map" />

</androidx.constraintlayout.widget.ConstraintLayout>